http-api-gw-v2-ack-eks.yaml
---
# Namespace creation for deploying resource
apiVersion: v1
kind: Namespace
metadata:
  name: "http-api-ack-eks-namespace"               ##### PLEASE UPDATE THE NAME FOR NAMESPACE
---
# Creating route-key for path
apiVersion: apigatewayv2.services.k8s.aws/v1alpha1
kind: Route
metadata:
  name: "http-api-ack-eks-route-vpc-link"                     ##### PLEASE UPDATE THE NAME FOR API GATEWAY ROUTE
  namespace: "http-api-ack-eks-namespace"
spec:
  apiRef:
    from:
      name: "http-api-ack-eks"
  routeKey: "ANY /{proxy+}"
  targetRef:
    from:
      name: "http-api-ack-eks-to-vpc-integration"         #### PLEASE UPDATE THE NAME FOR API GATEWAY VPC INTEGRATION
